--- a/src/app/sections/game/cell/cell.component.html
+++ b/src/app/sections/game/cell/cell.component.html
@@ -1,63 +1,74 @@
 <div
-      class="
-        flex items-center justify-center
-        w-10 aspect-square 
-        outline-1 outline-content-border-color
-        text-content-border-color
-        font-bold
-      "
-      (click)="onCellClick()"
-      (contextmenu)="onRightClick($event)"
-    >
-    
-      <!-- Front Layer -->
+  class="
+    flex items-center justify-center
+    w-10 aspect-square 
+    bg-form-field-background
+    outline-1 outline-content-border-color
+    text-content-border-color
+    font-bold
+  "
+  (click)="onCellClick()"
+  (contextmenu)="onRightClick($event)"
+>
+
+  <!-- Front Layer -->
+
+  <div
+    [id]="'front-layer-'+internalId"
+    class="
+      absolute w-full aspect-square
+      flex items-center justify-center
+      bg-content-hover-background
+      z-10
+    "
+  >
+    <i 
+      [id]="'flag-'+internalId" 
+      style="transform: scale(0);" 
+      class="pi pi-flag-fill"
+    ></i>
+  </div>
+
+  <!-- Back Layer -->
+
+  @if (state()?.isMine ?? false) {
+    <i class="absolute pi pi-circle-fill"></i>
+    <i class="!text-xl pi pi-star-fill"></i>
+  }
+  @else if ((state()?.val ?? 0) > 0) {
+    <div class="w-full h-full">
       <div
-        [id]="'front-layer-'+internalId"
-        class="
-          absolute w-10 aspect-square 
-          flex items-center justify-center
-          bg-content-hover-background 
-          rounded-sm outline-1 outline-content-border-color
-          z-10
-        "
+        class="w-full h-full flex items-center justify-center"
+        [ngClass]="
+        {
+          'bg-blue-400/20' : state()?.val == 1,
+          'bg-green-400/20' : state()?.val == 2,
+          'bg-red-400/20' : state()?.val == 3,
+          'bg-purple-400/20' : state()?.val == 4,
+          'bg-amber-800/20' : state()?.val == 5,
+          'bg-sky-300/20' : state()?.val == 6,
+          'bg-indigo-700/20' : state()?.val == 7,
+          'bg-gray-400/20' : state()?.val == 8
+        }"
       >
-        <i 
-          [id]="'flag-'+internalId" 
-          style="transform: scale(0);" 
-          class="pi pi-flag-fill"
-        ></i>
-      </div>
-
-      <!-- Back Layer -->
-
-      @if (state()?.isMine ?? false) {
-        <i class="absolute pi pi-circle-fill"></i>
-        <i class="!text-xl pi pi-star-fill"></i>
-      }
-      @else if ((state()?.val ?? 0) > 0) {
-        <div
-          class="w-full h-full flex items-center justify-center"
+        <span 
           [ngClass]="
-          {
-            'bg-blue-900/25' : state()?.val == 1,
-            'bg-amber-900/25' : state()?.val == 2,
-            'bg-emerald-900/25' : state()?.val == 3,
-            'bg-fuchsia-900/25' : state()?.val == 4,
-            'bg-red-900/25' : (state()?.val ?? 5) >= 5
-          }"
+            {
+              'text-blue-400' : state()?.val == 1,
+              'text-green-400' : state()?.val == 2,
+              'text-red-400' : state()?.val == 3,
+              'text-purple-400' : state()?.val == 4,
+              'text-amber-800' : state()?.val == 5,
+              'text-sky-300' : state()?.val == 6,
+              'text-indigo-700' : state()?.val == 7,
+              'text-gray-400' : state()?.val == 8
+            }"
         >
-          <span 
-            [ngClass]="
-              {
-                'text-blue-400' : state()?.val == 1,
-                'text-amber-400' : state()?.val == 2,
-                'text-emerald-400' : state()?.val == 3,
-                'text-fuchsia-400' : state()?.val == 4,
-                'text-red-400' : (state()?.val ?? 5) >= 5
-              }"
-          >
-            {{ state()?.val }}
-          </span>
-        </div>
-      }
+          {{ state()?.val }}
+        </span>
+      </div>
     </div>
+  }
+</div>
+
+<!-- (blue1, green2, red3, purple4, brown/maroon5, cyan6, iforgor7 and gray8) -->
