--- a/src/app/sections/game/game.component.html
+++ b/src/app/sections/game/game.component.html
@@ -11,6 +11,7 @@
       class="
         grid
         border-4 border-toolbar-border-color
+        rounded-l-sm rounded-br-sm
       "
       [style]="`
         grid-template-rows: repeat(${xn}, minmax(0, 1fr));
@@ -19,8 +20,14 @@
     >
       @for (rows of cells; track $index; let i = $index) {
         @for (cell of rows; track $index; let j = $index) {
-          <div class="relative">
-            <cell 
+          <div 
+            class="
+              relative 
+              outline-1 outline-content-border-color
+              z-10
+            "
+          >
+            <cell
               [(state)]="cells[i][j]" 
               (onClick)="onCellClick(i,j)"
               (onFlagged)="onFlagCell(i,j)"
@@ -42,18 +49,18 @@
       <div class="flex gap-2">
         <div class="flex flex-col gap-2">
           <label for="xn" class="text-xs">X</label>
-          <input pInputText id="xn" [(ngModel)]="xn" />
+          <p-inputnumber id="xn" [(ngModel)]="xn" />
         </div>
   
         <div class="flex flex-col gap-2">
           <label for="yn" class="text-xs">Y</label>
-          <input pInputText id="yn" [(ngModel)]="yn" />
+          <p-inputnumber id="yn" [(ngModel)]="yn" />
         </div>
       </div>
 
       <div class="flex flex-col gap-2">
         <label for="mines" class="text-xs">Mines</label>
-        <input pInputText id="mines" [(ngModel)]="mines" />
+        <p-inputnumber id="mines" [(ngModel)]="mines" />
       </div>
 
       <div class="flex gap-2">
