--- a/src/app/sections/game/grid/sweeper-grid.component.html
+++ b/src/app/sections/game/grid/sweeper-grid.component.html
@@ -7,7 +7,7 @@
       class="
         grid
         border-4 border-toolbar-border-color
-        rounded-l-sm rounded-br-sm
+        rounded-sm
       "
       [style]="`
         grid-template-rows: repeat(${xn()}, minmax(0, 1fr));
