--- a/src/app/sections/game/grid/sweeper-grid.component.html
+++ b/src/app/sections/game/grid/sweeper-grid.component.html
@@ -24,6 +24,7 @@
             "
           >
             <cell
+              class="min-w-fit"
               [id]="`${i}-${j}`"
               (onClick)="onCellClick(i, j)"
               (onRightClick)="onFlagCell(i, j)"
