--- a/src/app/sections/game/cell/cell.component.html
+++ b/src/app/sections/game/cell/cell.component.html
@@ -1,7 +1,7 @@
 <div
   class="
     flex items-center justify-center
-    w-10 aspect-square 
+    w-10 min-w-fit aspect-square
     bg-form-field-background
     outline-1 outline-content-border-color
     text-content-border-color
@@ -38,40 +38,40 @@
 
   <!-- Back Layer -->
 
-  @if (_state().isMine) {
+  @if (cellStore.isMine()) {
     <i class="absolute pi pi-circle-fill"></i>
     <i class="!text-xl pi pi-star-fill"></i> 
   }
-  @else if (_state().val > 0) {
+  @else if (cellStore.val() > 0) {
     <div class="w-full h-full">
       <div
         class="w-full h-full flex items-center justify-center"
         [ngClass]="
         {
-          'bg-blue-400/20' : _state().val == 1,
-          'bg-green-400/20' : _state().val == 2,
-          'bg-red-400/20' : _state().val == 3,
-          'bg-purple-400/20' : _state().val == 4,
-          'bg-amber-800/20' : _state().val == 5,
-          'bg-sky-300/20' : _state().val == 6,
-          'bg-indigo-700/20' : _state().val == 7,
-          'bg-gray-400/20' : _state().val == 8
+          'bg-blue-400/20' : cellStore.val() == 1,
+          'bg-green-400/20' : cellStore.val() == 2,
+          'bg-red-400/20' : cellStore.val() == 3,
+          'bg-purple-400/20' : cellStore.val() == 4,
+          'bg-amber-800/20' : cellStore.val() == 5,
+          'bg-sky-300/20' : cellStore.val() == 6,
+          'bg-indigo-700/20' : cellStore.val() == 7,
+          'bg-gray-400/20' : cellStore.val() == 8
         }"
       >
         <span 
           [ngClass]="
             {
-              'text-blue-400' : _state().val == 1,
-              'text-green-400' : _state().val == 2,
-              'text-red-400' : _state().val == 3,
-              'text-purple-400' : _state().val == 4,
-              'text-amber-800' : _state().val == 5,
-              'text-sky-300' : _state().val == 6,
-              'text-indigo-700' : _state().val == 7,
-              'text-gray-400' : _state().val == 8
+              'text-blue-400' : cellStore.val() == 1,
+              'text-green-400' : cellStore.val() == 2,
+              'text-red-400' : cellStore.val() == 3,
+              'text-purple-400' : cellStore.val() == 4,
+              'text-amber-800' : cellStore.val() == 5,
+              'text-sky-300' : cellStore.val() == 6,
+              'text-indigo-700' : cellStore.val() == 7,
+              'text-gray-400' : cellStore.val() == 8
             }"
         >
-          {{ _state().val }}
+          {{ cellStore.val() }}
         </span>
       </div>
     </div>
