--- a/src/app/sections/game/grid/sweeper-grid.component.html
+++ b/src/app/sections/game/grid/sweeper-grid.component.html
@@ -1,11 +1,11 @@
 <div class="flex flex-col items-center gap-8">
-  <div class="flex w-fit mx-auto">
+  <div class="flex min-w-fit w-fit mx-auto">
     
     <div
       id="game-grid"
 
       class="
-        grid
+        grid min-w-fit
         border-4 border-toolbar-border-color
         rounded-sm
       "
@@ -18,6 +18,7 @@
         @for (_ of [].constructor(yn()); track $index; let j = $index) {
           <div 
             class="
+              min-w-fit
               relative 
               outline-1 outline-content-border-color
               z-10
