--- a/src/app/sections/game/game.component.html
+++ b/src/app/sections/game/game.component.html
@@ -1,7 +1,3 @@
-<h1 class="text-center text-xl font-bold">
-  Game Exploration
-</h1>
-
 <cz-ui-blocker
   [target]="sweeperGrid"
   [blocked]="gameState()?.result != 'inProgress'"
@@ -10,11 +6,17 @@
 
 <p-card 
   styleClass="
-    mx-auto mt-8
+    mx-auto mt-4
     border-4 bg-content-background border-toolbar-border-color 
     lg:max-w-screen-lg
   "
 >
+  <ng-template #header>
+    <h1 class="mt-4 mb-0 text-center text-xl font-bold">
+      {{ 'game.title' | translate }}
+    </h1>
+  </ng-template>
+
   <div 
     class="
       flex flex-col justify-between items-center  
@@ -27,17 +29,17 @@
     <div class="flex flex-col h-full w-full m-4">
 
       <digital-display
-        label="Time"
+        [label]="'game.time' | translate"
         [value]="gameState()?.time | durationFormat: 'ms': 'hhmmss'"
       ></digital-display>
   
       <digital-display
-        label="Left clicks"
+        [label]="'game.left-clicks' | translate"
         [value]="gameState()?.leftClicks"
       ></digital-display>
   
       <digital-display
-        label="Right clicks"
+        [label]="'game.right-clicks' | translate"
         [value]="gameState()?.rightClicks"
       ></digital-display>
       
@@ -54,12 +56,12 @@
         @switch (gameState()?.result) {
           @case ('win') {
             <p-message size="small">
-              🎉 You win! 🎉 
+              {{ 'game.result.win' | translate }} 🎉
             </p-message>
           }
           @case ('lose') {
             <p-message size="small" severity="error">
-              Game Over ☹️
+              {{ 'game.result.lose' | translate }} ☹️
             </p-message>
           }
         }
@@ -70,7 +72,7 @@
       <div class="self-end inline-flex justify-center w-full gap-4 mt-4">
         <p-button
           size="small" 
-          label="Solve"
+          [label]="'game.auto-solve' | translate"
           (onClick)="onAutoSolve()"
           [disabled]="gameState()?.result != 'inProgress'"
         ></p-button>  
@@ -78,7 +80,7 @@
         <p-button
           class="ml-4"
           size="small" 
-          label="Reset"
+          [label]="'game.reset' | translate"
           (onClick)="onReset()"
         ></p-button>
       </div>
@@ -97,3 +99,12 @@
 
   </div>
 </p-card>
+
+<div class="flex justify-center mt-4">
+  <p-button
+    size="small"
+    severity="secondary"
+    [label]="'game.back-home' | translate"
+    (onClick)="onBackHome()"
+  ></p-button>
+</div>
