--- a/src/app/sections/about-me/resume/resume.component.html
+++ b/src/app/sections/about-me/resume/resume.component.html
@@ -41,7 +41,7 @@
     <div 
       class="
         inline-flex items-center
-        block md:absolute
+        md:absolute
         -top-15 right-8
         w-fit
         rounded-lg 
@@ -49,7 +49,7 @@
         shadow-lg 
       "
     >
-      <span class="mx-2 h-fit text-center text-sm text-center text-muted-color">
+      <span class="mx-2 h-fit text-center text-sm text-muted-color">
         Want it for takeout?
       </span>
     
